CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(ledgebase)

LIST(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake/Modules)

OPTION(LEDGERDB "Use LedgerDB" ON)
OPTION(AMZQLDB "Use QLDB" OFF)

if(LEDGERDB)
  message(STATUS "Use LedgerDB")
  add_definitions(-DLEDGERDB)
endif()

if(AMZQLDB)
  message(STATUS "Use QLDB")
  add_definitions(-DAMZQLDB)
endif()

SET(BOOST_COMPONENT "filesystem")
LIST(APPEND BOOST_COMPONENT "program_options")
LIST(APPEND BOOST_COMPONENT "thread")

# ---[ Dependencies
include(cmake/Dependencies.cmake)

enable_testing()
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -O2 -pthread -lssl -Wall -Wno-unused-function -fPIC")

MESSAGE(STATUS "${PROTOBUF_PROTOC_EXECUTABLE}")
LIST(APPEND LEDGEBASE_INCLUDE_DIR "${CMAKE_SOURCE_DIR}")
INCLUDE_DIRECTORIES(${LEDGEBASE_INCLUDE_DIR})
MESSAGE(STATUS "include: ${LEDGEBASE_INCLUDE_DIR}")

SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)

ADD_SUBDIRECTORY(ledger)
ADD_SUBDIRECTORY(distributed)
ADD_SUBDIRECTORY(test)
